# gomoku

./: .gitignore  Cargo.toml  Makefile  README.md  acoph  acph  pyproject.toml
coeffs/: adam.rs  coeffs_002ms.rs  coeffs_002ms_new.rs  coeffs_002ms_old.rs  coeffs_008ms.rs  coeffs_008ms_old.rs  coeffs_032ms.rs  coeffs_032ms_new.rs  coeffs_032ms_old.rs  coeffs_stencil7_008ms.rs  coeffs_stencil7_512ms.rs  current.rs  gradientrian_manual66.rs  grid_search_6.rs  grid_search_7.rs  incdec6.rs  incdec_stencil6_depth10.rs  incdec_stencil6_depth2.rs  incdec_stencil7_008ms.rs  incdec_stencil7_128ms.rs  incdec_stencil7_32ms.rs  incdec_stencil7_depth10.rs  incdec_stencil7_depth2.rs  new.rs  old.rs  omnisearch6.rs  omnisearch7.rs  tmp.rs  wip.rs
git_hooks/: pre-commit
scripts/: board_lines.py  generate_diagonals.py  omnimonial_calculator.py  unique_coeffs.py
src/: adamtrain.rs  arena.rs  bot.rs  check_winner.rs  constants.rs  coordinates.rs  dueltrain.rs  game.rs  genetrain.rs  gradientrain.rs  gridtrain.rs  handle_capture.rs  handle_captures.rs  incdectrain.rs  main.rs  model.rs  momentrain.rs  omnitrain.rs  player.rs  state.rs  textures.rs  turn.rs  view.rs
src/algorithms/: alpha_beta_pruning.rs  minimax.rs  mod.rs
src/bots/: abp_new.rs  abp_old.rs  alpha_beta.rs  alpha_beta_pruning.rs  first.rs  idabp.rs  idabp_new.rs  idabp_old.rs  minimax.rs  mod.rs  negamax.rs  random.rs  random_mover.rs
src/game/: board.rs  check_finished.rs  check_winner.rs  creates_double_three.rs  handle_captures.rs  lines.rs  mod.rs  state.rs
src/game/rules/: check_winner.rs  creates_double_three.rs  handle_captures.rs  mod.rs
src/gui/: coordinates.rs  events.rs  mod.rs  textures.rs  view.rs
src/heuristics/: capturophile.rs  coeff_heuristic.rs  coeffistic.rs  duelistic.rs  genetic.rs  genetrain.rs  heuristicos.rs  manual.rs  mod.rs  new.rs  old.rs  zero.rs
src/rules/: check_double_three.rs  check_winner.rs  creates_double_three.rs  handle_captures.rs  mod.rs
weights/: before_grid_restart.rs  current.rs  duel.rs
