[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = { version = "0.19.0", default-features = false }
nannou_egui = { version = "0.19.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
