[package]
name = "gomoku"
version = "0.1.0"
edition = "2024"

[dependencies]
nannou = { version = "0.19", default-features = false }
nannou_egui = { version = "0.19", default-features = false }

[lints.clippy]
# warn or deny all lints by default
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

absolute_paths = "allow"
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
assertions_on_constants = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_numeric_fallback = "allow"
expect_used = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
panic = "allow"
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
# i hate it but it makes sense for this project
pub_use = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
single_call_fn = "allow"
std_instead_of_core = "allow"
suboptimal_flops = "allow"
unreachable = "allow"
unwrap_used = "allow"
use_debug = "allow"
